--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>React App</title>
   </head>
   <body>
