--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,7 @@
 
     window.document.onkeydown = (evt) => {
       // bloqueio tecla F12
-      if (evt.keyCode === 123) {
-        // alert("Pode não, bixo...");
-        return false;
-        // bloqueio comandos Ctrl + U
-      } else if (evt.ctrlKey && evt.keyCode === 85) {
+      if (evt.ctrlKey && evt.keyCode === 85) {
         // alert("Pode não, bixo...");
         return false;
         // bloqueio comandos Ctrl + C
