--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,11 @@
 
     window.document.onkeydown = (evt) => {
       // bloqueio tecla F12
+      // if (evt.keyCode === 123) {
+      //   // alert("Pode não, bixo...");
+      //   return false;
+      //   // bloqueio comandos Ctrl + C
+      // } else
       if (evt.ctrlKey && evt.keyCode === 85) {
         // alert("Pode não, bixo...");
         return false;
