--- a/public/index.html
+++ b/public/index.html
@@ -59,16 +59,20 @@
 
     window.document.onkeydown = (evt) => {
       // bloqueio tecla F12
-      if (evt.keyCode === 123) {
-        return false;
-        // bloqueio comandos Ctrl + U
-      } else if (evt.ctrlKey && evt.keyCode === 85) {
+      // if (evt.keyCode === 123) {
+      //   return false;
+      //   // bloqueio comandos Ctrl + U
+      // } else
+      if (evt.ctrlKey && evt.keyCode === 85) {
         return false;
         // bloqueio comandos Ctrl + Shift + I
       } else if (evt.ctrlKey && evt.shiftKey && evt.keyCode === 73) {
         return false;
         // bloqueio comandos Ctrl + C
       } else if (evt.ctrlKey && evt.keyCode === 67) {
+        return false;
+        // bloqueio comandos Ctrl + X
+      } else if (evt.ctrlKey && evt.keyCode === 88) {
         return false;
       }
     };
