--- a/public/index.html
+++ b/public/index.html
@@ -58,19 +58,22 @@
     };
 
     window.document.onkeydown = (evt) => {
-      // bloqueio tecla F12
+      // bloqueio tecla F12:
       if (evt.keyCode === 123) {
         return false;
-        // bloqueio comandos Ctrl + U
+        // bloqueio tecla F11:
+      } else if (evt.keyCode === 122) {
+        return false;
+        // bloqueio comandos Ctrl + U:
       } else if (evt.ctrlKey && evt.keyCode === 85) {
         return false;
-        // bloqueio comandos Ctrl + Shift + I
+        // bloqueio comandos Ctrl + Shift + I:
       } else if (evt.ctrlKey && evt.shiftKey && evt.keyCode === 73) {
         return false;
-        // bloqueio comandos Ctrl + C
+        // bloqueio comandos Ctrl + C:
       } else if (evt.ctrlKey && evt.keyCode === 67) {
         return false;
-        // bloqueio comandos Ctrl + X
+        // bloqueio comandos Ctrl + X:
       } else if (evt.ctrlKey && evt.keyCode === 88) {
         return false;
       }
