--- a/public/index.html
+++ b/public/index.html
@@ -63,10 +63,11 @@
       //   return false;
       //   // bloqueio tecla F11:
       // } else
-      if (evt.keyCode === 122) {
-        return false;
-        // bloqueio comandos Ctrl + U:
-      } else if (evt.ctrlKey && evt.keyCode === 85) {
+      // if (evt.keyCode === 122) {
+      //   return false;
+      //   // bloqueio comandos Ctrl + U:
+      // } else
+      if (evt.ctrlKey && evt.keyCode === 85) {
         return false;
         // bloqueio comandos Ctrl + Shift + I:
       } else if (evt.ctrlKey && evt.shiftKey && evt.keyCode === 73) {
